# ChatVis

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  blockers.txt  environment.yaml  opencode.json  pyproject.toml  session-ses_132f.md  session-ses_148f.md
.omo/drafts/: refactor-code-examples-and-prompts.md
.omo/run-continuation/: ses_14d2aa7e8ffeN71Zu720b1dTTn.json
.opencode/agent/: paraview-prompt-formatter.md
chatvis/: __init__.py  agent.py  cli.py  code_examples.py  llm.py  logger.py  main.py  models.py  prompts.py  script.py  sources.py  utils.py
chatvis/documents/: code.py  code_examples.py  code_generation.py  code_improvement.py  prompt_examples.py  prompt_generation.py  prompt_generation_examples.py
chatvis/v1/: __init__.py
chatvis/v1/documents/: __init__.py  code.py  prompts.py
chatvis/v1/prompts/: code_generation.py  code_improvement.py  prompt_improvement.py  user_prompts.py
chatvis/v2/: __init__.py  env.py  llm_client.py  pvpython.py  run_all.py  run_one.py  utils.py
chatvis/v2/ChatVis-main/ChatVis_agent/: README.md  run_all.py  (+3 more)
chatvis/v2/documents/: code.py  corpus.py  embeddings.py  retrieval.py
chatvis/v2/prompts/: code_generation.py  code_improvement.py  system_prompt.py
chatvis/v3/: README.md
chatvis/v3/agents/: paraview-prompt-formatter.md
data/: ml-100.vti  ml-100.vtk
data/benchmark/ml-dvr/: ml-dvr.py  prompt.txt
data/benchmark/ml-iso/: ml-iso.py
data/benchmark/ml-slice-iso/: ml-iso.py  prompt.txt
data/benchmark/points-surf-clip/: points-surf-clip.py  prompt.txt
data/benchmark/stream-glyph/: prompt.txt  stream-glyph.py
data/generated_data/ml-dvr/: ml-dvr_1.py
data/generated_data/ml-iso/: ml-iso_1.py
data/generated_data/ml-slice-iso/: ml-slice-iso_1.py
data/generated_data/points-surf-clip/: points-surf-clip_1.py
data/generated_data/stream_glyph/: stream-glyph_1.py
notebooks/: ml-dvr.ipynb  ml-slice-iso.ipynb  points-surf-clip.ipynb
scripts/: run-all-scenarios.sh
tests/: test_llm.py  test_main_v2.py  test_script.py  test_utils.py
(+63 files in other folders)
