[project]
name = "chatvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chatvis*"]
exclude = ["data*", "notebooks*", "tests*"]
