[project]
name = "chatvis"
version = "0.3.0"
description = "ChatVis is an AI-powered assistant that converts natural-language descriptions into fully functional ParaView (pvpython) scientific visualization scripts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu==1.14.3",
    "numpy==2.4.6",
    "openai==2.41.0",
    "pandas>=3.0.3",
    "progress>=1.6.1",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chatvis*"]
exclude = ["data*", "notebooks*", "tests*"]

[project.scripts]
chatvis = "chatvis.main:main"

[tool.isort]
profile = "black"
line_length = 88
